--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               
             <div class="text-content">
                 <article id="hello-friend"data-aos="fade-up"data-aos-delay="0"><p class="jello">H</p><p class="jello">i</p><p class="jello">(</p><p class="jello">)</p><p class="jello">;</p>&nbsp;<p class="jello">I</p><p class="jello">'</p><p class="jello">m</p></article>
-                <article id="name" data-aos="fade-up"data-aos-delay="200"><p class="jello">A</p><p class="jello">n</p><p class="jello">k</p><p class="jello">i</p><p class="jello">t</p><p class="jello">a</p>&nbsp;<p class="jello">J</p><p class="jello">a</p><p class="jello">i</p><p class="jello">s</p><p class="jello">w</p><p class="jello">a</p></article>
+                <article id="name" data-aos="fade-up"data-aos-delay="200"><p class="jello">A</p><p class="jello">n</p><p class="jello">k</p><p class="jello">i</p><p class="jello">t</p><p class="jello">a</p>&nbsp;<p class="jello">J</p><p class="jello">a</p><p class="jello">i</p><p class="jello">s</p><p class="jello">w</p><p class="jello">a</p><p class="jello">l</p></article>
 
 
                 <article id="work" data-aos="fade-up"data-aos-delay="400"><div><p class="jello">I</p></div><div><p class="jello">d</p><p class="jello">e</p><p class="jello">s</p><p class="jello">i</p><p class="jello">g</p><p class="jello">n</p></div><div><p class="jello">&</p></div><div><p class="jello">c</p><p class="jello">o</p><p class="jello">d</p><p class="jello">e</p></div><div><p class="jello">f</p><p class="jello">o</p><p class="jello">r</p></div><div><p class="jello">a</p><p class="jello">p</p><p class="jello">p</p><p class="jello">.</p></div></article>
