--- a/index.html
+++ b/index.html
@@ -231,38 +231,38 @@
 
          <!-- education section begins -->
 
-         <section class="projects-section-container" id="projects">
-            <div class="projects-section-div">
-                <div class="projects-heading"><article class="projects-heading-article" tabindex="0"aria-label="My projects starts from here">&#60;/Education Background &#62;</article><p class="projectsHeadingP"></p></div>
-                <div class="project-boxes-div">
+         <section class="education-section-container" id="education">
+            <div class="education-section-div">
+                <div class="education-heading"><article class="education-heading-article" tabindex="0"aria-label="My education background">&#60;/Education Background &#62;</article><p class="educationHeadingP"></p></div>
+                <div class="education-boxes-div">
 
-                 <div class="project-box project-box1" id="project-box1">
+                 <div class="education-box education-box1" id="education-box1">
                     <div class="info-div">
-                        <article class="ProjectHeading">B.TECH. in Computer Science & Engineering</article>
-                        <p class="ProjectDescription">Buddha Institute of Technology</p>
-                        <p class="ProjectDescription">Gorakhpur-273001, Uttar Pradesh</p>
-                        <p class="ProjectDescription">CGPA: 8.16/10</p>
+                        <article class="educationHeading">B.TECH. in Computer Science & Engineering</article>
+                        <p class="educationDescription">Buddha Institute of Technology</p>
+                        <p class="educationDescription">Gorakhpur-273001, Uttar Pradesh</p>
+                        <p class="educationDescription">CGPA: 8.16/10</p>
                     </div>
                     <div class="image-div"><img src="src\webp\btech.png" alt=""></div>
                 </div>
 <!-- ---------------------- -->
-                    <div class="project-box project-box1" id="project-box1">
+                    <div class="education-box education-box1" id="education-box1">
                         <div class="info-div">
-                            <article class="ProjectHeading">Senior Secondary School</article>
-                            <p class="ProjectDescription">St. Joseph's School</p>
-                            <p class="ProjectDescription">Gorakhpur-273001, Uttar Pradesh</p>
-                            <p class="ProjectDescription">Grade: 73.6 %</p>
+                            <article class="educationHeading">Senior Secondary School</article>
+                            <p class="educationDescription">St. Joseph's School</p>
+                            <p class="educationDescription">Gorakhpur-273001, Uttar Pradesh</p>
+                            <p class="educationDescription">Grade: 73.6 %</p>
                         </div>
                         <div class="image-div"><img src="src\webp\12th.png" alt=""></div>
                     </div>
 
             <!-- ---------------------- -->
-            <div class="project-box project-box1" id="project-box1">
+            <div class="education-box education-box1" id="education-box1">
                 <div class="info-div">
-                    <article class="ProjectHeading">Secondary School</article>
-                    <p class="ProjectDescription">St. Joseph's School</p>
-                    <p class="ProjectDescription">Gorakhpur-273001, Uttar Pradesh</p>
-                    <p class="ProjectDescription">Grade: 83.6 %</p>
+                    <article class="educationHeading">Secondary School</article>
+                    <p class="educationDescription">St. Joseph's School</p>
+                    <p class="educationDescription">Gorakhpur-273001, Uttar Pradesh</p>
+                    <p class="educationDescription">Grade: 83.6 %</p>
                 </div>
                 <div class="image-div"><img src="src\webp\10th.png" alt=""></div>
             </div>
